// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`aute generate usage > inline function 1`] = `
"USAGE:
  COMMAND <OPTIONS> 

OPTIONS:
  -h, --help             Display this help message
  -v, --version          Display this version
"
`;

exports[`aute generate usage > loosely entry command 1`] = `
"USAGE:
  COMMAND <OPTIONS> 

OPTIONS:
  -f, --foo <foo>          
  -h, --help               Display this help message
  -v, --version            Display this version
"
`;

exports[`aute generate usage > loosely sub commands 1`] = `
"USAGE:
  COMMAND <OPTIONS> 

OPTIONS:
  -f, --foo <foo>          
  -h, --help               Display this help message
  -v, --version            Display this version

USAGE:
  COMMAND command2 <OPTIONS>

OPTIONS:
  -b, --bar [bar]          
  -h, --help               Display this help message
  -v, --version            Display this version
"
`;

exports[`aute generate usage > strictly entry command 1`] = `
"Modern CLI tool (gunshi v0.0.0)

USAGE:
  gunshi <OPTIONS> 

OPTIONS:
  -f, --foo <foo>          [string]  The foo option
  -h, --help               [boolean] Display this help message
  -v, --version            [boolean] Display this version

EXAMPLES:
  # Example 1
  $ gunshi --foo bar
  # Example 2
  $ gunshi -f bar
"
`;

exports[`aute generate usage > strictly sub commands 1`] = `
"Modern CLI tool (gunshi v0.0.0)

USAGE:
    gunshi [command1] <OPTIONS> 
    gunshi <COMMANDS>

COMMANDS:
    command2                 
    command1                 

For more info, run any command with the \`--help\` flag:
    gunshi command2 --help
    gunshi command1 --help

OPTIONS:
    -f, --foo <foo>               The foo option
    -h, --help                    Display this help message
    -v, --version                 Display this version

EXAMPLES:
    # Example 1
    $ gunshi --foo bar
    # Example 2
    $ gunshi -f bar

Modern CLI tool (gunshi v0.0.0)

USAGE:
  gunshi command2 <OPTIONS>

COMMANDS:
  command2            
  command1            

For more info, run any command with the \`--help\` flag:
  gunshi command2 --help
  gunshi command1 --help

OPTIONS:
  -b, --bar [bar]          The bar option
  -h, --help               Display this help message
  -v, --version            Display this version

EXAMPLES:
  # Example 1
  $ gunshi command2 --bar 42
  # Example 2
  $ gunshi command2 -b 42
"
`;
